[tool.poetry]
name = "hoa-dashboard"
version = "0.1.0"
description = "HOA dashboard app"
authors = ["Joe Christoff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
gcsfs = "^2024.10.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
